# banchoxide

./: Cargo.toml  README.md
src/: main.rs  packets.rs  utils.rs
src/api/domains/: cho.rs  osu.rs
src/api/v1/: osu.rs
src/constants/: clientflags.rs  gamemodes.rs  mods.rs  packets.rs  privileges.rs  regexes.rs
src/structs/: achievement.rs  beatmap.rs  channel.rs  clan.rs  collection.rs  match.rs  menu.rs  models.rs  player.rs  score.rs
