[package]
name = "banchoxide"
version = "0.1.0"
edition = "2021"

[profile.dev]
codegen-units = 512

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
debug = false
rpath = false

[dependencies]
actix-web = "4.0"
bitflags = "1.3"
bson = "2"
rand = "0.8"
chrono = "0.4"
md-5 = "0.10.1"
mongodb = "2"
uuid = "0.8"
regex = "1.5"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bincode = "1.3.3"
futures = "0.3.21"
lazy_static = "1.4"