[package]
name = "banchoxide"
version = "0.1.0"
edition = "2021"

[profile.dev]
codegen-units = 256

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
codegen-units = 1024
lto = true
debug = false
rpath = false

[dependencies]
actix-web = "4.0"
async_once = "0.2"
base64 = "0.13.0"
bincode = "1.3.3"
bitflags = "1.3"
bson = "2"
chrono = "0.4"
futures = "0.3.21"
futures-util = "0.3"
lazy_static = "1.4"
md-5 = "0.10.1"
mongodb = "2"
rand = "0.8"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = "0.8"
